Steer towards java9