@@ -28,10 +28,8 @@
     </parent>
 
     <properties>
-        <!--<kotlin.compiler.incremental>false</kotlin.compiler.incremental>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
         <kotlin.version>1.2.30</kotlin.version>
     </properties>
 
@@ -204,7 +202,7 @@
                         <configuration>
                             <sourceDirs>
                                 <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
-                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                                <!--<sourceDir>${project.basedir}/src/main/java</sourceDir>-->
                             </sourceDirs>
                         </configuration>
                     </execution>
@@ -214,7 +212,7 @@
                         <configuration>
                             <sourceDirs>
                                 <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
-                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                                <!--<sourceDir>${project.basedir}/src/test/java</sourceDir>-->
                             </sourceDirs>
                         </configuration>
                     </execution>
@@ -309,6 +307,15 @@
                 </configuration>
             </plugin>
 
+            <!-- workaround for SUREFIRE-1424 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-modules java.base</argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
 
         <!-- https://stackoverflow.com/questions/34037051/spring-boot-font-awesome-ots-parsing-error-failed-to-convert
@@ -332,25 +339,6 @@
             </resource>
         </resources>
     </build>
-
-    <repositories>
-        <repository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <pluginRepositories>
         <pluginRepository>
